--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/browser-kit": ">=2.7 <=4.2.4",
         "codeception/module-filesystem": "^1.0.0",
         "codeception/module-yii2": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "codeception/module-asserts": "^1.0.0",
+        "dektrium/yii2-user": "0.9.12"
     },
     "config": {
         "process-timeout": 1800,
